# src/dtos/store.dto.js
@@ -3,6 +3,13 @@ export const addStoreResponseDTO = (store, region, category) => {
 }
 
 export const addStoreReviewResponseDTO = (store) => {
-    console.log(store);
     return {"name": store[0].name, "rate": store[0].rate};
+}
+
+export const addStoreMissionResponseDTO = (store, mission) => {
+    const storeMission = [];
+    for (let i = 0; i < mission[0].length; i++) {
+        storeMission.push(mission[0][i].title);
+    }
+    return {"name": store[0].name, "missionList": storeMission};
 }
